# FaceRecognition_ArcFace-RetinaFace

./: .gitignore  CMakeLists.txt  CUDA_BLUEPRINT.md  DAS.html  README.md  attendance.csv  dashboard.html  et --hard 3829a86  index1.1.html  main.py  model.py  realtime_arcface.py  realtime_arcnogpu.py  register_face.py  requeriments.txt  run_gpu.sh
API/: main.py  mongoconection.py
FaceRecognition_ArcFace-RetinaFace/: CMakeList.txt  display_helper.py  test2.mojo  test_cv2.mojo
FaceRecognition_ArcFace-RetinaFace/CUDA/: camera_bridge.cpp  srf_bridge.cu  srf_onnx_bridge.cpp
FaceRecognition_ArcFace-RetinaFace/Kernel-profile/: README.md  VectorizationKernel.mojo  main.mojo  srf_bridge_interface.mojo  test.mojo
Kernel-profile/: main.mojo  srf_bridge.cpp  srf_bridge_interface.mojo
Windows_Deploy/: CMakeLists.txt  Instrucciones_Instalacion_Windows.md  build_kernel.bat  main.py  register_face.py  requeriments.txt  run_gpu.bat
Windows_Deploy/modules/: __init__.py  attendance.py  camera.py  embeddings.py  kernel_ffi.py  logger.py  recognizer.py
Windows_Deploy/modules/Saved/: 2.npy  Ari Papugod.npy  ulisees.npy  ulises2.npy  ulisess.npy  uuuuu.npy
modules/: Saved.py  __init__.py  attendance.py  camera.py  embeddings.py  kernel_ffi.py  recognizer.py
modules/Saved/: ari.npy  ari7.npy  cesar.npy  fernando.npy  raquel.npy  ulises.npy
website 51/: dashboard.html
